--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,17 @@
+# See the docstring in versioneer.py for instructions. Note that you must
+# re-run 'versioneer.py setup' after changing this section, and commit the
+# resulting files.
 [versioneer]
-vcs = git
-style = pep440
-versionfile_source = alphalens/_version.py
-versionfile_build = alphalens/_version.py
-tag_prefix = v
-parentdir_prefix = alphalens-
+VCS=git
+style=pep440
+versionfile_source=alphalens/_version.py
+versionfile_build=alphalens/_version.py
+tag_prefix= v
+parentdir_prefix= alphalens-
 
-[egg_info]
-tag_build = 
-tag_date = 0
-
+[flake8]
+exclude =
+    .git,
+    __pycache__,
+    docs,
+    versioneer.py
